--- a/src/pageStyles/aboutUs.module.scss
+++ b/src/pageStyles/aboutUs.module.scss
@@ -54,6 +54,7 @@
 
     .staffContainer {
         flex-direction: column;
+        align-items: center;
     }
 
     .summaryContainer {
